--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,17 @@
         android:inputType="textPersonName"
         android:text="Name"
         app:layout_constraintBottom_toTopOf="@+id/btnShared"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/btnShared"
+        app:layout_constraintStart_toStartOf="@+id/btnShared" />
+
+    <TextView
+        android:id="@+id/tvSharedPreferPrev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Not data"
+        app:layout_constraintEnd_toEndOf="@+id/btnShared"
+        app:layout_constraintStart_toStartOf="@+id/btnShared"
+        app:layout_constraintTop_toBottomOf="@+id/btnShared" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
